@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2023-2025 Burak Sezer
+ * Copyright (c) 2023-2026 Burak Sezer
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -16,7 +16,6 @@
 
 package com.kronotop.bucket.optimizer;
 
-import com.kronotop.bucket.BucketMetadata;
 import com.kronotop.bucket.planner.physical.*;
 
 import java.util.ArrayList;
@@ -33,26 +32,26 @@ import java.util.List;
 public class RedundantScanEliminationRule implements PhysicalOptimizationRule {
 
     @Override
-    public PhysicalNode apply(PhysicalNode node, BucketMetadata metadata, PlannerContext context) {
+    public PhysicalNode apply(PlannerContext context, PhysicalNode node) {
         return switch (node) {
-            case PhysicalAnd and -> optimizeAnd(and, metadata, context);
-            case PhysicalOr or -> optimizeOr(or, metadata, context);
-            case PhysicalNot not -> new PhysicalNot(context.nextId(), apply(not.child(), metadata, context));
+            case PhysicalAnd and -> optimizeAnd(context, and);
+            case PhysicalOr or -> optimizeOr(context, or);
+            case PhysicalNot not -> new PhysicalNot(context.nextId(), apply(context, not.child()));
             case PhysicalElemMatch elemMatch -> new PhysicalElemMatch(
                     context.nextId(),
                     elemMatch.selector(),
-                    apply(elemMatch.subPlan(), metadata, context)
+                    apply(context, elemMatch.subPlan())
             );
             default -> node; // No optimization for leaf nodes
         };
     }
 
-    private PhysicalNode optimizeAnd(PhysicalAnd and, BucketMetadata metadata, PlannerContext context) {
+    private PhysicalNode optimizeAnd(PlannerContext context, PhysicalAnd and) {
         List<PhysicalNode> optimizedChildren = new ArrayList<>();
 
         // First, recursively optimize children
         for (PhysicalNode child : and.children()) {
-            optimizedChildren.add(apply(child, metadata, context));
+            optimizedChildren.add(apply(context, child));
         }
 
         // Remove duplicates while preserving order using LinkedHashSet
@@ -62,7 +61,7 @@ public class RedundantScanEliminationRule implements PhysicalOptimizationRule {
 
         // Return simplified structure
         if (deduplicatedChildren.size() == 1) {
-            return deduplicatedChildren.get(0);
+            return deduplicatedChildren.getFirst();
         } else if (deduplicatedChildren.size() < and.children().size()) {
             return new PhysicalAnd(context.nextId(), deduplicatedChildren);
         } else {
@@ -71,12 +70,12 @@ public class RedundantScanEliminationRule implements PhysicalOptimizationRule {
         }
     }
 
-    private PhysicalNode optimizeOr(PhysicalOr or, BucketMetadata metadata, PlannerContext context) {
+    private PhysicalNode optimizeOr(PlannerContext context, PhysicalOr or) {
         List<PhysicalNode> optimizedChildren = new ArrayList<>();
 
         // First, recursively optimize children
         for (PhysicalNode child : or.children()) {
-            optimizedChildren.add(apply(child, metadata, context));
+            optimizedChildren.add(apply(context, child));
         }
 
         // Remove duplicates while preserving order using LinkedHashSet
@@ -86,7 +85,7 @@ public class RedundantScanEliminationRule implements PhysicalOptimizationRule {
 
         // Return simplified structure
         if (deduplicatedChildren.size() == 1) {
-            return deduplicatedChildren.get(0);
+            return deduplicatedChildren.getFirst();
         } else if (deduplicatedChildren.size() < or.children().size()) {
             return new PhysicalOr(context.nextId(), deduplicatedChildren);
         } else {
@@ -108,8 +107,8 @@ public class RedundantScanEliminationRule implements PhysicalOptimizationRule {
     @Override
     public boolean canApply(PhysicalNode node) {
         return switch (node) {
-            case PhysicalAnd and -> and.children().size() >= 1; // Apply to single child too
-            case PhysicalOr or -> or.children().size() >= 1; // Apply to single child too
+            case PhysicalAnd and -> !and.children().isEmpty(); // Apply to single child too
+            case PhysicalOr or -> !or.children().isEmpty(); // Apply to single child too
             case PhysicalNot not -> true;
             case PhysicalElemMatch elemMatch -> true;
             default -> false;
