@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2023-2025 Burak Sezer
+ * Copyright (c) 2023-2026 Burak Sezer
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -16,7 +16,8 @@
 
 package com.kronotop.bucket.optimizer;
 
-import com.kronotop.bucket.index.IndexDefinition;
+import com.kronotop.bucket.index.IndexStatus;
+import com.kronotop.bucket.index.SingleFieldIndexDefinition;
 import com.kronotop.bucket.planner.Operator;
 import com.kronotop.bucket.planner.physical.*;
 import org.junit.jupiter.api.BeforeEach;
@@ -38,7 +39,7 @@ class RangeScanFallbackRuleTest extends BaseOptimizerTest {
     @BeforeEach
     void setUpRule() {
         rule = new RangeScanFallbackRule();
-        context = new PlannerContext();
+        context = new PlannerContext(null);
     }
 
     @Test
@@ -49,7 +50,7 @@ class RangeScanFallbackRuleTest extends BaseOptimizerTest {
         );
 
         // Apply the rule
-        PhysicalNode result = rule.apply(rangeScan, metadata, context);
+        PhysicalNode result = rule.apply(context, rangeScan);
 
         assertInstanceOf(PhysicalAnd.class, result);
         PhysicalAnd and = (PhysicalAnd) result;
@@ -57,7 +58,7 @@ class RangeScanFallbackRuleTest extends BaseOptimizerTest {
         assertEquals(2, and.children().size());
 
         // First child: PhysicalFullScan with age >= 18 filter
-        PhysicalFullScan fullScan1 = (PhysicalFullScan) and.children().get(0);
+        PhysicalFullScan fullScan1 = (PhysicalFullScan) and.children().getFirst();
         PhysicalFilter filter1 = (PhysicalFilter) fullScan1.node();
         assertEquals("age", filter1.selector());
         assertEquals(Operator.GTE, filter1.op());
@@ -78,7 +79,7 @@ class RangeScanFallbackRuleTest extends BaseOptimizerTest {
                 1, "score", 50, null, false, false, null
         );
 
-        PhysicalNode result = rule.apply(rangeScan, metadata, context);
+        PhysicalNode result = rule.apply(context, rangeScan);
 
         // Should be converted to PhysicalFullScan with single PhysicalFilter
         assertInstanceOf(PhysicalFullScan.class, result);
@@ -99,9 +100,9 @@ class RangeScanFallbackRuleTest extends BaseOptimizerTest {
                 1, "price", null, 100.0, true, true, null
         );
 
-        PhysicalNode result = rule.apply(rangeScan, metadata, context);
+        PhysicalNode result = rule.apply(context, rangeScan);
 
-        // Should be converted to PhysicalFullScan with single PhysicalFilter
+        // Should be converted to PhysicalFullScan with a single PhysicalFilter
         assertInstanceOf(PhysicalFullScan.class, result);
         PhysicalFullScan fullScan = (PhysicalFullScan) result;
 
@@ -120,7 +121,7 @@ class RangeScanFallbackRuleTest extends BaseOptimizerTest {
                 1, "rating", 1, 5, true, true, null
         );
 
-        PhysicalNode result = rule.apply(rangeScan, metadata, context);
+        PhysicalNode result = rule.apply(context, rangeScan);
 
         // Result should be PhysicalAnd with two PhysicalFullScan children
         assertInstanceOf(PhysicalAnd.class, result);
@@ -128,7 +129,7 @@ class RangeScanFallbackRuleTest extends BaseOptimizerTest {
         assertEquals(2, and.children().size());
 
         // First child: PhysicalFullScan with rating >= 1 filter
-        PhysicalFullScan fullScan1 = (PhysicalFullScan) and.children().get(0);
+        PhysicalFullScan fullScan1 = (PhysicalFullScan) and.children().getFirst();
         PhysicalFilter filter1 = (PhysicalFilter) fullScan1.node();
         assertEquals("rating", filter1.selector());
         assertEquals(Operator.GTE, filter1.op());
@@ -145,16 +146,16 @@ class RangeScanFallbackRuleTest extends BaseOptimizerTest {
     @Test
     void shouldNotConvertRangeScanWithValidIndex() {
         // Create a mock index for this test
-        IndexDefinition mockIndex = IndexDefinition.create(
+        SingleFieldIndexDefinition mockIndex = SingleFieldIndexDefinition.create(
                 "age-index", "age", org.bson.BsonType.INT32
-        );
+                , false, IndexStatus.WAITING);
 
         // Create a range scan with a valid index (should not be converted)
         PhysicalRangeScan rangeScan = new PhysicalRangeScan(
                 1, "age", 18, 65, true, false, mockIndex
         );
 
-        PhysicalNode result = rule.apply(rangeScan, metadata, context);
+        PhysicalNode result = rule.apply(context, rangeScan);
 
         // Should remain unchanged
         assertEquals(rangeScan, result);
@@ -169,7 +170,7 @@ class RangeScanFallbackRuleTest extends BaseOptimizerTest {
         PhysicalFilter regularFilter = new PhysicalFilter(2, "name", Operator.EQ, "John");
         PhysicalAnd and = new PhysicalAnd(3, List.of(rangeScan, regularFilter));
 
-        PhysicalNode result = rule.apply(and, metadata, context);
+        PhysicalNode result = rule.apply(context, and);
 
         // Should convert to nested structure: PhysicalAnd[PhysicalAnd[2 PhysicalFullScans], PhysicalFilter]
         assertInstanceOf(PhysicalAnd.class, result);
@@ -177,11 +178,11 @@ class RangeScanFallbackRuleTest extends BaseOptimizerTest {
         assertEquals(2, resultAnd.children().size());
 
         // First child: PhysicalAnd containing two PhysicalFullScan children (from range scan conversion)
-        PhysicalAnd nestedAnd = (PhysicalAnd) resultAnd.children().get(0);
+        PhysicalAnd nestedAnd = (PhysicalAnd) resultAnd.children().getFirst();
         assertEquals(2, nestedAnd.children().size());
 
         // First nested child: PhysicalFullScan with age >= 18 filter
-        PhysicalFullScan fullScan1 = (PhysicalFullScan) nestedAnd.children().get(0);
+        PhysicalFullScan fullScan1 = (PhysicalFullScan) nestedAnd.children().getFirst();
         PhysicalFilter filter1 = (PhysicalFilter) fullScan1.node();
         assertEquals("age", filter1.selector());
         assertEquals(Operator.GTE, filter1.op());
@@ -209,7 +210,7 @@ class RangeScanFallbackRuleTest extends BaseOptimizerTest {
         );
         PhysicalNot not = new PhysicalNot(2, rangeScan);
 
-        PhysicalNode result = rule.apply(not, metadata, context);
+        PhysicalNode result = rule.apply(context, not);
 
         // Should convert the nested range scan
         assertInstanceOf(PhysicalNot.class, result);
@@ -230,9 +231,9 @@ class RangeScanFallbackRuleTest extends BaseOptimizerTest {
     @Test
     void shouldReturnFalseForCanApplyWithRangeScanValidIndex() {
         // Create a mock index for this test
-        IndexDefinition mockIndex = IndexDefinition.create(
+        SingleFieldIndexDefinition mockIndex = SingleFieldIndexDefinition.create(
                 "age-index", "age", org.bson.BsonType.INT32
-        );
+                , false, IndexStatus.WAITING);
 
         PhysicalRangeScan rangeScan = new PhysicalRangeScan(
                 1, "age", 18, 65, true, false, mockIndex
@@ -279,7 +280,7 @@ class RangeScanFallbackRuleTest extends BaseOptimizerTest {
         );
 
         assertThrows(IllegalStateException.class, () -> {
-            rule.apply(rangeScan, metadata, context);
+            rule.apply(context, rangeScan);
         });
     }
 }
